name:                adventofcode2017
version:             0.1.0.0
synopsis:            Solutions for adventofcode 2017
homepage:            https://github.com/jaxwood/adventofcode2017#readme 
license:             BSD3
license-file:        LICENSE
author:              Jacob Lorenzen
maintainer:          lorenzen.jacob@gmail.com
copyright:           2017 Jacob Lorenzen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/jaxwood/adventofcode2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:
                       Advent.Day01
                     , Advent.Day02
                     , Advent.Day03
                     , Advent.Day04
                     , Advent.Day05
                     , Advent.Day06
                     , Advent.Day07
                     , Advent.Day08
                     , Advent.Day09
                     , Advent.Day10
                     , Advent.Day11
                     , Advent.Day12
                     , Advent.Day13
                     , Advent.Day14
                     , Advent.Day15
                     , Advent.Day16
                     , Advent.Day17
                     , Advent.Day18
                     , Advent.Day19
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , unordered-containers
                     , parsec
                     , array
  default-language:    Haskell2010

test-suite adventofcode2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode2017
                     , hspec
                     , directory
                     , text
                     , containers
                     , unordered-containers
                     , parsec
                     , array
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       
                       Advent.Day01Spec
                     , Advent.Day02Spec
                     , Advent.Day03Spec
                     , Advent.Day04Spec
                     , Advent.Day05Spec
                     , Advent.Day06Spec
                     , Advent.Day07Spec
                     , Advent.Day08Spec
                     , Advent.Day09Spec
                     , Advent.Day10Spec
                     , Advent.Day11Spec
                     , Advent.Day12Spec
                     , Advent.Day13Spec
                     , Advent.Day14Spec
                     , Advent.Day15Spec
                     , Advent.Day16Spec
                     , Advent.Day17Spec
                     , Advent.Day18Spec
                     , Advent.Day19Spec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jaxwood/adventofcode2017
